WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152644
REGRESSION(
r194143
): Float width incorrectly calculated on Wikipedia
https://bugs.webkit.org/show_bug.cgi?id=152644
Summary
REGRESSION(r194143): Float width incorrectly calculated on Wikipedia
Myles C. Maxfield
Reported
2016-01-01 18:02:24 PST
https://en.m.wikipedia.org/wiki/Tteokbokki
Version 9.0.2 (11601.3.9,
r194284
) 15C50 See screenshot.
Attachments
Screenshot
(292.94 KB, image/png)
2016-01-01 18:02 PST
,
Myles C. Maxfield
no flags
Details
Reproduction
(489.64 KB, application/x-webarchive)
2016-01-01 18:04 PST
,
Myles C. Maxfield
no flags
Details
Reproduction
(175 bytes, text/html)
2016-01-01 19:49 PST
,
Myles C. Maxfield
no flags
Details
Patch
(5.98 KB, patch)
2016-01-04 02:58 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-01-01 18:02:52 PST
Created
attachment 268076
[details]
Screenshot
Myles C. Maxfield
Comment 2
2016-01-01 18:03:50 PST
Does not reproduce on system Safari on 15C50. Regression.
Myles C. Maxfield
Comment 3
2016-01-01 18:04:36 PST
Created
attachment 268077
[details]
Reproduction
Myles C. Maxfield
Comment 4
2016-01-01 19:49:26 PST
Created
attachment 268079
[details]
Reproduction
Myles C. Maxfield
Comment 5
2016-01-01 20:14:07 PST
Caused by
http://trac.webkit.org/changeset/194143
Myles C. Maxfield
Comment 6
2016-01-01 21:18:37 PST
The relevant portion of the spec is: "The max-content inline size of a block container box is the inline-size of the box after layout, if all children are sized under a max-content constraint." However, it seems that computing the max content inline size can't depend on layout, because layout may require knowing the max content inline size (such in the case of floats)
Myles C. Maxfield
Comment 7
2016-01-01 21:18:59 PST
Hyatt: Do you have any thoughts on the above comment?
Sergio Villar Senin
Comment 8
2016-01-04 01:45:42 PST
(In reply to
comment #5
)
> Caused by
http://trac.webkit.org/changeset/194143
Checking...
Sergio Villar Senin
Comment 9
2016-01-04 02:58:20 PST
Created
attachment 268180
[details]
Patch
Myles C. Maxfield
Comment 10
2016-01-04 14:04:50 PST
(In reply to
comment #6
)
> The relevant portion of the spec is: > > "The max-content inline size of a block container box is the inline-size of > the box after layout, if all children are sized under a max-content > constraint." > > However, it seems that computing the max content inline size can't depend on > layout, because layout may require knowing the max content inline size (such > in the case of floats)
Turns out the "layout" that this spec mentions isn't a regular layout - it has special rules (such as percentages resolved against an intrinsic computation resolve to auto, and max intrinsic sizes are unconstrained). So there isn't a circular dependency. There's a fair amount of history here; we choose our faster computeBlockPreferredLogicalWidth() rather than a full-on layout (with a special mode) because it gives results which are almost always correct, and is much faster.
WebKit Commit Bot
Comment 11
2016-01-04 14:44:00 PST
Comment on
attachment 268180
[details]
Patch Clearing flags on attachment: 268180 Committed
r194558
: <
http://trac.webkit.org/changeset/194558
>
WebKit Commit Bot
Comment 12
2016-01-04 14:44:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug